<resources>
    <string name="app_name">Playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist">playlist</string>
    <string name="image">image</string>
    <string name="unknown_author">Неизвестный исполнитель</string>
    <string name="dot">•</string>
    <string name="duration">0:00</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="mySongs">Моя музыка</string>
    <string name="listen">Слушать</string>
</resources>